--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,6 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "mysql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=1234;"
-    }
+    },
+    "JWT": "minimal_api-alunos-vamos_la"
 }
